fixed form input alignment and nav

--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 /* -------  General Styles ------- */
+* {
+  box-sizing: border-box;
+}
+
+.vertCen {
+  align-self: center;
+}
+
 .formInput {
   display: flex;
   justify-content: space-between;
+  /*margin: 0 auto;*/
 }
 
 body {
@@ -86,7 +95,7 @@ header nav ul li a {
 
 header nav ul {
   display: flex;
-  justify-content: center;
+  justify-content:center;
 }
 
 header nav ul li a:hover {
@@ -107,7 +116,7 @@ form label {
 form select,
 form input {
   margin-bottom: 20px;
-  width: 180px;
+  width: 50%;
 }
 
 form button {
@@ -129,20 +138,27 @@ footer p {
   color: #fff;
   text-align: center;
   padding: 20px;
+  margin: 0;
 }
 
 /* -------  Media Query ------- */
 
 @media all and (min-width: 480px) {
+
+
   .formInput {
     display: flex;
     flex-direction: column;
+    flex: 1;
+    margin: 0 10px;
   }
 
   .group {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
   }
 
   section[id='about'] > div div:last-child {
@@ -154,4 +170,29 @@ footer p {
     display: flex;
     flex-direction: column;
   }
+
+  form input {
+    width: 100%;
+    margin: auto;
+  }
+
+   form select {
+    width: 100%;
+    margin: auto;
+  }
+
+  form button {
+  background-color: #ff385c;
+  border: none;
+  color: #fff;
+  width: 100%;
+  margin: auto;
 }
+
+header nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0 auto;
+}
+}
+
